syntax = "proto3";

package glootest;
option go_package = "glootest/protos";

import "google/api/annotations.proto";

service TestService {
  rpc TestParameterMethod (TestRequest) returns (TestResponse) {
    option (google.api.http) = {
          get: "/t/{str}"
        };
  }
  rpc TestMethod (TestRequest) returns (TestResponse) {
    option (google.api.http) = {
      post: "/test"
      body: "str"
    };
  }
}

message TestRequest {
  string str = 1;
}

message TestResponse {
  string str = 1;
}
